Update and rename Forms.html to HTML- CSS- JS Projects/Forms.html

--- a/HTML- CSS- JS Projects/Forms.html
+++ b/HTML- CSS- JS Projects/Forms.html
@@ -1,3 +1,5 @@
+This is a basic HTML Script to add a form field on a webpage - needs to be connected to back end for authenitcation
+
 <!DOCTYPE html>
 <html>
 <head>
