Update and rename firstpage.html to HTML- CSS- JS Projects/1) Firstpage.html

--- a/HTML- CSS- JS Projects/1) Firstpage.html
+++ b/HTML- CSS- JS Projects/1) Firstpage.html
@@ -1,3 +1,5 @@
+This is My first attempt at writing HTML, here I'm just adding headings, tables, ordered lists and unordered lists to see what the changes are
+
 <!DOCTYPE html>
 <html>
 <head>
