--- a/page2.html
+++ b/page2.html
@@ -1,3 +1,5 @@
+This is Literally an exmaple of adding a 2nd page to a folder with an index file and linking to it locally
+
 <!DOCTYPE html>
 <html>
 <head>
