Update and rename Pokemon Chart.html to HTML- CSS- JS Projects/ Pokemon Chart.html

--- a/HTML- CSS- JS Projects/ Pokemon Chart.html
+++ b/HTML- CSS- JS Projects/ Pokemon Chart.html
@@ -1,3 +1,8 @@
+This is another Tutorial Page from the Web Developer Bootcamp course on Udemy with Colt Steele:
+https://www.udemy.com/the-web-developer-bootcamp/learn/v4/overview
+
+This tutorial is about making and editing HTML tables
+
 <!DOCTYPE html>
 <html>
 <head>
